# tinyxml2

./: .bazelrc  .clang-tidy  .gitignore  BUILD  BUILD.bazel  Dockerfile  MODULE.bazel  README.md  WORKSPACE.bazel
.github/workflows/: build_and_test.yml  ci.yml
build_platforms/: BUILD.bazel
build_settings/: BUILD
resources/: BUILD.bazel
